--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <li class="about-item list">
               <div class="icon-box">
                 <svg class="comics-item-icon" width="70" height="70">
-                  <use href="./img/icons.svg#icon-antenna"></use>
+                  <use href="./img/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="about-pre-text">Современные технологии</h3>
@@ -528,7 +528,7 @@
         </div>
       </div>
     </footer> -->
-    <div class="backdrope is-hidden" data-modal>
+    <div class="backdrope" data-modal>
       <div class="modal">
         <button data-modal-close type="button" class="modal-close">
           <svg class="close-icon" width="18" height="18">
@@ -540,7 +540,7 @@
         <form action="#" class="modal-form">
           <div class="modal-form-field">
           <label for="user-name" class="modal-input-text">Имя</label>
-          <label for="user-email" class="modal-input-text">Почта</label>
+          
           <div class="modal-input-over">
           <input
           type="text"
@@ -599,23 +599,21 @@
           ></textarea>
           </div>
           <div class="modal-form-field">
-          <label for="modal-checkbox" class="modal-checkbox-text"></label>
-            <input
-             type="checkbox"
-            name="modal-checkbox"
-            id="modal-checkbox"
-            class="modal-checkbox"
-            />
-            <span class="check-box"></span>
-           Соглашаюсь с рассылкой и принимаю 
-           <a class="check-text-color" href="">Условия договора</a></label>
 
+              <input
+                type="checkbox"
+                name="policy"
+                class="modal-check visually-hidden"
+                id="modal-check"
+              />
+              <label for="modal-check" class="modal-check-text">Соглашаюсь с рассылкой и принимаю
+           <a class="check-text-color" href="">Условия договора</a></label>
           </div>
           <button type="submit" class="hero-btn">Отправить</button>
          
         </form>
       </div>
     </div>
-    <script src="./JS/modal.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
