--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
         </div>
       </div>
     </footer> -->
-    <div class="backdrope" data-modal>
+    <div class="backdrope is-hidden" data-modal>
       <div class="modal">
         <button data-modal-close type="button" class="modal-close">
           <svg class="close-icon" width="18" height="18">
