--- a/index.html
+++ b/index.html
@@ -614,6 +614,6 @@
         </form>
       </div>
     </div>
-    <script src="./JS/modal.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
