--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     />
 
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header class="header">
@@ -614,6 +615,6 @@
         </form>
       </div>
     </div>
-    <script src="./js/modal.js"></script>
+    <script src="./JS/modal.JS"></script>
   </body>
 </html>
