--- a/index.html
+++ b/index.html
@@ -615,6 +615,6 @@
         </form>
       </div>
     </div>
-    <script src="./JS/modal.JS"></script>
+    <script src="./JS/modal.js"></script>
   </body>
 </html>
