--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/main.min.css" />
+    <!----<link rel="stylesheet" href="./css/style.css"/>---->
+    <link rel="stylesheet" href="./css/main.min.css"/>
   </head>
   <body>
     <header class="header">
